assets/css/style.css
/* ... */
.sidebarx_p2.dif {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 0px;
}
.sidebarx_p2.dif label {
}
.sidebarx_p2.dif input {
  padding: 0px !important;
  height: 45px;
  font-size: 48px !important;
  margin-top: 7px !important;
  margin-bottom: 35px !important;
  font-weight: 500 !important;
}
.sidebarx_p2.dif input::placeholder {
  font-family: "SourceSansPro-Regular" !important;
  font-weight: 400 !important;
}
.sidebarx_p2_difbox {
  float: left;
  width: 360px;
  margin-right: 10px;
}

.planyy_steps_data {
}
.planyy_steps_data fieldset {
  opacity: 0 !important;
  position: relative !important;
  display: none !important;
}
.planyy_steps_data fieldset:nth-child(1) {
  display: block !important;
  opacity: 1 !important;
}
.xac1 .planyy_steps_data fieldset {
  opacity: 0 !important;
  position: relative !important;
  display: none !important;
}
.xac1 .planyy_steps_data fieldset:nth-child(1) {
  display: block !important;
  opacity: 1 !important;
}
.xac2 .planyy_steps_data fieldset {
  opacity: 0 !important;
  position: relative !important;
  display: none !important;
}
.xac2 .planyy_steps_data fieldset:nth-child(2) {
  display: block !important;
  opacity: 1 !important;
}
.xac3 .planyy_steps_data fieldset {
  opacity: 0 !important;
  position: relative !important;
  display: none !important;
}
.xac3 .planyy_steps_data fieldset:nth-child(3) {
  display: block !important;
  opacity: 1 !important;
}
.xac4 .planyy_steps_data fieldset {
  opacity: 0 !important;
  position: relative !important;
  display: none !important;
}
.xac4 .planyy_steps_data fieldset:nth-child(4) {
  display: block !important;
  opacity: 1 !important;
}
.xac5 .planyy_steps_data fieldset {
  opacity: 0 !important;
  position: relative !important;
  display: none !important;
}
.xac5 .planyy_steps_data fieldset:nth-child(5) {
  display: block !important;
  opacity: 1 !important;
}

.fieldset_data {
  height: 100vh;
  max-height: calc(100vh - 190px);
  overflow: auto;
  padding-bottom: 60px;
}
.fieldset_data.st1 {
  /* max-height: calc(100vh - 90px); */
}
.fieldset_data.st2 {
  max-height: calc(100vh - 90px);
}
.Generated_Financial_plans_data_box_p2 p i {
  font-style: normal;
  margin-left: 17px;
}
.Generated_Financial_plans_data_box_p2 p i b {
  font-family: "SourceSansPro-Bold";
  margin-left: 4px;
  color: #31353f;
  font-size: 16px;
}
.xop {
  opacity: 0;
}
.planyy_steps_data fieldset input.btns1 {
  width: 240px !important;
  height: 40px;
  display: flex;
  justify-content: center;
  background-color: #ffc32c !important;
  align-items: center;
  color: #31353f !important;
  border-radius: 25px !important;
  margin: 0px auto !important;
  margin-top: 36px !important;
  font-size: 16px !important;
  font-family: "SourceSansPro-SemiBold" !important;
  text-decoration: none;
  transition: 0.3s;
  padding: 0px !important;
  font-weight: inherit !important;
  letter-spacing: 0px !important;
  margin: 23px auto 0px auto !important;
  transition: 0.3s !important;
  z-index: 99;
}
.planyy_steps_data fieldset input.btns1.st1 {
  width: 280px !important;
}
@media screen and (max-width: 375px) {
  .planyy_steps_data fieldset input.btns1 {
    width: 90% !important;
  }
}
.planyy_steps_data fieldset input.btns1.active {
  opacity: 1 !important;
}
.planyy_steps_data fieldset input.btns1.st1.ex {
  width: 200px !important;
  position: fixed;
  bottom: 120px;
  left: calc(50% - 100px);
}
.planyy_steps_data fieldset input.btns1:hover {
  color: #31353f !important;
  transform: scale(1.05, 1);
  background-color: #ffc32c !important;
  box-shadow: 0px 3px 20px -5px #ffc32c !important;
  text-decoration: none !important;
  border: none !important;
  outline: none !important;
}
.checking {
  height: 100vh;
  width: 100vw;
  z-index: 999;
  background-size: 100%;
  background-repeat: no-repeat;
  opacity: 0.5;
  position: absolute;
  display: none;
}

.msomoderate {
  max-width: 1224px;
  margin: 10px auto 0px auto;
}
.msomoderate .planyy_hed_p3 {
  display: none;
}
.msomoderate_box {
  width: calc(33% - 9px);
  height: 51vh;
  /* height: 280px; */
  border: 2px solid #e8e8e8;
  border-radius: 5px;
  float: left;
  position: relative;
  margin-left: 12px;
  cursor: pointer;
  align-items: flex-start;
  max-height: 394px;
  /* min-height: 294px; */
  min-height: 369px;
  padding-top: 2rem;
  /* padding-top: 57px; */
}

@media screen and (max-width: 1023px) {
  .msomoderate_box {
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

@media screen and (max-width: 767px) {
  .msomoderate_box {
    min-height: unset;
  }
}

.btnspnmakpay1 {
  float: left;
  width: 100%;
  position: fixed !important;
  left: 0px;
  bottom: 0px;
  padding-bottom: 20px;
  /* background: linear-gradient(
    to top,
    #fff,
    rgba(255, 255, 255, 0.5) 50%,
    rgba(255, 255, 255, 0.5) 40%,
    rgba(255, 255, 255, 0.5) 100%
  ); */
  /* background: linear-gradient(to bottom, #fff, transparent); */
  background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0));
  display: block !important;
  opacity: 1 !important;
  z-index: 99;
  overflow: hidden;
}
.stps1 {
  display: flex;
  justify-content: center;
  align-items: center;
}
.stps1 .sidebarx_p2_difbox {
  align-items: center;
}
.msomoderate_box.active {
  border: 2px solid #ffc32c;
}
.msomoderate_box.active label {
  color: #ffc32c;
}
.msomoderate_box:nth-child(2) {
}
.msomoderate_box img {
  width: 200px;
  height: auto;
  margin: 0px auto 0px auto;
  display: block;
}
.msomoderate_box label {
  font-size: 20px;
  color: #ffc32c;
  line-height: 29px;
  letter-spacing: 0px;
  /* bottom: 60px; */
  bottom: 65px;
  height: 25px;
  width: 125px;
  font-family: "SourceSansPro-SemiBold";
}

@media screen and (max-width: 1023px) {
  .msomoderate_box label {
    position: absolute;
    margin-top: 0 !important;
  }
}

.msomoderate_box span {
  float: left;
  width: 100%;
  height: 1px;
  background-color: #ffc32c;
  margin: 5px 0px 3px 0px;
}
/* ... */

